# siMILe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
CHWOS/SIMILE/: SIMILE.py  classification.py  inference.py  model.py  old_SIMILE_delete.py  prediction.py  run_saved_model.py  svm.py  train.py
CHWOS/configs/: config.example.ini  config_mock_test.ini  config_smoke_test.ini
CHWOS/data_classes/: CSV.py  Cav1Mutant.py  Mock.py  PC3PTRF.py  base.py  dstorm_sim.py  hela_dynasore_pitstop.py
CHWOS/experiment_class/: CavPTRF_exp.py
CHWOS/mil/bag_representation/: __init__.py  bag_representation.py  mapping.py  non_mapping.py
CHWOS/mil/dimensionality_reduction/: __init__.py
CHWOS/mil/metrics/: __init__.py  custom.py  manager.py
CHWOS/mil/models/: __init__.py  model.py
CHWOS/mil/models/bag_level/: __init__.py  miles.py
CHWOS/mil/preprocessing/: __init__.py  standarize_lists.py
CHWOS/mil/trainer/: __init__.py  trainer.py
CHWOS/mil/utils/: utils.py
CHWOS/mil/validators/: __init__.py
CHWOS/utils/: args.py  bags.py  clearml.py  dataset.py  folds.py  log.py  metrics.py  misc.py  parse_configs.py  save.py  sweep.py  timer.py
CONFIG/: config.example.ini
apptainer/: similem.def
example/: simple_case.ini
example/train/: simple_case_A_train.csv  simple_case_B_train.csv
example/valid/: simple_case_A_valid.csv  simple_case_B_valid.csv
scripts/: gen_mock_data.py
singularity/: similem.def
